# lying

./: .gitignore  CNAME  architecture.drawio  game.md  index.html  main.py  pyproject.toml
config/: default.yaml
css/: game.css  style.css
js/: ai-agent.js  ai-charts.js  app.js  charts.js  engine.js  game-world.js  i18n.js  modes.js  slide-results.js
memory/: project_lying.md
shared/css/: style.css
shared/js/: app.js  charts.js  i18n.js  version-loader.js
src/: __init__.py  agents.py  beliefs.py  config.py  distributions.py  experiments.py  games.py  inference.py  organization.py  visualization.py
v1/js/: v1.js
v2/css/: v2.css
v2/js/: ai-agent.js  v2-charts.js  v2.js
v3/css/: v3.css
v3/js/: v3-engine.js  v3.js
